--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -1,19 +1,15 @@
-@import "mixins.less";
-
-/* =Reset
+/* =Normalize
 -----------------------------------------------------------------------------*/
 *,
 *:before,
 *:after {
-	.box-sizing(border-box);
+    box-sizing: border-box;
 }
-
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
-
 html,
 body,
 div,
@@ -94,20 +90,27 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
-
 a:active,
 a:hover {
     outline: 0;
 }
-
+button,
+input {
+    line-height: normal;
+}
+button,
+select {
+    text-transform: none;
+}
+/* Structure tags */
 article,
 aside,
 details,
@@ -119,136 +122,104 @@ hgroup,
 main,
 nav,
 section,
-embed,
-object,
-iframe,
-audio,
-video,
-canvas,
-progress,
-meter,
-output,
-textarea {
-	display: block;
+summary {
+    display: block;
 }
-
+audio,
+canvas,
+video {
+    display: inline-block;
+}
 audio:not([controls]) {
     display: none;
     height: 0;
 }
-
 /* To prevent some browsers from inserting quotes on q and p */
 blockquote,
 q {
-	quotes: none;
+    quotes: none;
 }
 blockquote p:before,
 blockquote p:after,
 q:before,
 q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
-
 /* Table reset */
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 caption,
 th,
 td {
-	text-align: left;
-	vertical-align: top;
+    text-align: left;
+    vertical-align: top;
+    font-weight: normal;
 }
 thead th,
 thead td {
-	font-weight: bold;
-	vertical-align: bottom;
+    font-weight: bold;
+    vertical-align: bottom;
 }
-
 /* Image inside */
 a img,
 th img,
 td img {
-	vertical-align: top;
+    vertical-align: top;
 }
-
 button,
 input,
 select,
 textarea {
-	margin: 0;
+    margin: 0;
 }
 textarea {
-	overflow: auto;
-	vertical-align: top;
-	resize: vertical;
+    overflow: auto;
+    vertical-align: top;
+    resize: vertical;
 }
-
 /* Normalize buttons in IE */
 button {
-	width: auto;
-	overflow: visible;
+    width: auto;
+    overflow: visible;
 }
-
 /* Hand cursor on clickable controls */
-input[type="reset"],
-input[type="submit"],
-input[type="file"],
-input[type="radio"],
-input[type="checkbox"],
-select,
+input[type=button],
+input[type=submit],
 button {
-	cursor: pointer;
+    cursor: pointer;
 }
-
-
 /* Trick with vertical align for radio and checkbox  */
 input[type="radio"],
 input[type="checkbox"] {
-	font-size: 110%;
-	position: relative;
-	top: -1px;
-	margin-right: 3px;
+    font-size: 110%;
+    position: relative;
+    top: -1px;
 }
-
 /* Normalize search fields */
 input[type="search"] {
-	-webkit-appearance: textfield;
+    -webkit-appearance: textfield;
 }
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button {
-	-webkit-appearance: none;
+input[type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
 }
-
-/* Normalize horizontal line */
 hr {
-	display: block;
-	height: 1px;
-	border: 0;
-	border-top: 1px solid #ddd;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ddd;
 }
-
 /* Responsive media */
 img,
-video,
-audio,
-embed,
-object {
-	max-width: 100%;
-}
-img,
-video,
-embed,
-object {
-	height: auto;
-}
-embed,
-object {
-    height: 100%;
+video {
+    max-width: 100%;
+    height: auto;
 }
 img {
-	vertical-align: middle;
-	-ms-interpolation-mode: bicubic;
+    -ms-interpolation-mode: bicubic;
+}
+audio {
+    width: 100%;
 }
