--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,7 +4,8 @@
 @import "normalize";
 @import "typography";
 
-@import "grid";
+@import "semantic-grid";
+@import "grid-overrides";
 @import "blocks";
 
 @import "navigation";
