--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -3,7 +3,7 @@
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
+    @include box-sizing(border-box);
 }
 html {
     font-family: sans-serif;
