--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,15 +3,15 @@
 
 @import "normalize";
 @import "typography";
+@import "fonts";
 
-@import "semantic-grid";
-@import "grid-overrides";
-@import "blocks";
+@import "grid";
+//@import "blocks";
 
 @import "navigation";
 
-@import "tables";
-@import "forms";
+//@import "tables";
+//@import "forms";
 
 @import "buttons";
 
